[gd_scene load_steps=10 format=2]

[ext_resource path="res://prefabs/menu_button/menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/open_simplex_noise_demo/simplex_noise_demo.gd" type="Script" id=2]
[ext_resource path="res://sprites/kenney_medievalrtspack/PNG/Retina/Tile/medievalTile_57.png" type="Texture" id=3]
[ext_resource path="res://sprites/kenney_medievalrtspack/PNG/Retina/Tile/medievalTile_58.png" type="Texture" id=4]
[ext_resource path="res://sprites/kenney_medievalrtspack/PNG/Retina/Tile/medievalTile_43.png" type="Texture" id=5]
[ext_resource path="res://sprites/kenney_medievalrtspack/PNG/Retina/Tile/medievalTile_44.png" type="Texture" id=6]
[ext_resource path="res://fonts/arial_48.tres" type="DynamicFont" id=7]




[sub_resource type="OpenSimplexNoise" id=1]
octaves = 2
period = 5.0

[sub_resource type="NoiseTexture" id=2]
flags = 0
width = 15
height = 15
noise = SubResource( 1 )

[node name="SimplexNoiseDemo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" parent="." instance=ExtResource( 1 )]

[node name="Noise" type="TextureRect" parent="."]
margin_left = 87.4211
margin_top = 430.527
margin_right = 343.421
margin_bottom = 686.527
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SimplexNoise" type="GridContainer" parent="."]
margin_left = 400.0
margin_right = 1120.0
margin_bottom = 720.0
columns = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer1Palette" type="GridContainer" parent="."]
margin_left = 89.4738
margin_top = 159.474
margin_right = 339.474
margin_bottom = 409.474
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grass1" type="TextureRect" parent="Layer1Palette"]
margin_right = 123.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true

[node name="Grass2" type="TextureRect" parent="Layer1Palette"]
margin_left = 127.0
margin_right = 250.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree1" type="TextureRect" parent="Layer1Palette"]
margin_top = 127.0
margin_right = 123.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree2" type="TextureRect" parent="Layer1Palette"]
margin_left = 127.0
margin_top = 127.0
margin_right = 250.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true

[node name="WaitForNoise" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Reset" type="Button" parent="."]
margin_left = 145.0
margin_right = 283.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 7 )
text = "Reset"
